lesson page mock up modified postgres db added processing reads\ persists lesson added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.devtools.restart.exclude=static/**,public/**
 spring.devtools.restart.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost/telegrambot
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.jpa.generate-ddl=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
