--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.devtools.restart.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost/telegrambot
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
