--- a/pom.xml
+++ b/pom.xml
@@ -69,13 +69,20 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>4.0.0</version>
+            <version>4.1.3</version>
         </dependency>
 
         <dependency>
             <groupId>org.webjars</groupId>
+            <artifactId>bootstrap-glyphicons</artifactId>
+            <version>bdd2cbfba0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.webjars</groupId>
             <artifactId>angularjs</artifactId>
-            <version>1.6.8</version>
+            <version>1.7.5</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
@@ -88,6 +95,12 @@
             <artifactId>jquery</artifactId>
             <version>3.3.1</version>
         </dependency>
+
+        <!-- log -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -97,6 +110,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>question-bot</finalName>
     </build>
 
 </project>
