TASK-2.9 logs rotate and user's filter by 0 lesson

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.devtools.restart.exclude=static/**,public/**
 spring.devtools.restart.enabled=true
 
-logging.file=question-bot.log
-logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+logging.file.path=/home/panda/
+logging.file.name=question-bot.log
+logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss,GMT+03} [%thread] %-5level %logger{15} - %msg%n"
+logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
+logging.file.max-history=14
 
 spring.datasource.url=jdbc:postgresql://localhost/telegrambot
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,6 +16,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 server.port=8000
 server.address=127.0.0.1
