--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ logging.file.name=question-bot.log
 logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss,GMT+03} [%thread] %-5level %logger{15} - %msg%n"
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
+logging.file.max-size=200MB
 logging.file.max-history=14
 
 spring.datasource.url=jdbc:postgresql://localhost/telegrambot
