TASK-3.1   stats with details by lessons have been done   logs settings fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.devtools.restart.enabled=true
 
-logging.file.path=/home/panda/
+logging.file.path=./
 logging.file.name=question-bot.log
-logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss,GMT+03} [%thread] %-5level %logger{15} - %msg%n"
-logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss,GMT+03} [%thread] %-5level %logger{32} - %msg%n
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 logging.file.max-size=200MB
 logging.file.max-history=14
